--- a/news.html
+++ b/news.html
@@ -17,4 +17,6 @@ title: News
 {% endfor %}
 </ul>
 
-<p class="rss-subscribe"><a href="{{ "/rss.xml" | prepend: site.baseurl }}">RSS</a></p>
+<p class="rss-subscribe">
+    <a href="{{ "/rss.xml" | prepend: site.baseurl }}" title="RSS"><img src="{{ "/assets/favicon.ico" | prepend: site.baseurl }}"></a>
+</p>
