Fixed news page image

--- a/news.html
+++ b/news.html
@@ -18,5 +18,5 @@ title: News
 </ul>
 
 <p class="rss-subscribe">
-    <a href="{{ "/rss.xml" | prepend: site.baseurl }}" title="RSS"><img src="{{ "/assets/favicon.ico" | prepend: site.baseurl }}"></a>
+    <a href="{{ "/rss.xml" | prepend: site.baseurl }}" title="RSS"><img src="{{ "/assets/feed.png" | prepend: site.baseurl }}"></a>
 </p>
