--- a/releases.html
+++ b/releases.html
@@ -9,7 +9,7 @@ redirect_from:
 
 
 
-<table class="releases-table">
+<table class="table table-banded releases-table">
     <thead>
         <tr>
             <th>Package</th>
