Special formatting for home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 
     <div class="panels-wrapper">
-        <div class="features-panel panel panel-first">
+        <div class="features-panel panel panel-col-1">
             <h2 class="panel-title">Features</h2>
 
             <div class="panel-content">
@@ -29,7 +29,7 @@ layout: default
             </div>
         </div>
 
-        <div class="get-started-panel panel">
+        <div class="get-started-panel panel panel-col-2">
             <h2 class="panel-title">Get started</h2>
 
             <div class="panel-content">
@@ -40,7 +40,7 @@ layout: default
         </div>
 
 
-        <div class="downloads-panel panel panel-last">
+        <div class="downloads-panel panel panel-col-3">
             <h2 class="panel-title">Downloads</h2>
 
             <div class="panel-content">
