Updated links on front page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 
 <div class="home">
@@ -35,7 +36,7 @@ layout: default
             <div class="panel-content">
                 <p>Read how you could run your own OpenID&nbsp;provider.</p>
 
-                <p><a href="/documentation/getting-started" class="front-link">Getting Started&nbsp;Guide</a></p>
+              <p><a href="/docs/1/#getting-started" class="front-link">Getting Started&nbsp;Guide</a></p>
             </div>
         </div>
 
