--- a/pear/index.html
+++ b/pear/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>SimpleID PEAR channel</title>
     <link rel="stylesheet" type="text/css" href="pirum.css" />
-    <link rel="alternate" type="application/rss+xml" href="http://simpleid.koinic.net/pear/feed.xml" title="SimpleID PEAR channel Latest Releases" />
+    <link rel="alternate" type="application/rss+xml" href="http://simpleid.org/pear/feed.xml" title="SimpleID PEAR channel Latest Releases" />
 </head>
 <body>
     <div id="doc" class="yui-t7">
@@ -14,7 +14,7 @@
         <div id="bd">
             <div class="yui-g">
                 <em>Registering</em> the channel:
-                <pre><code>pear channel-discover simpleid.koinic.net</code></pre>
+                <pre><code>pear channel-discover simpleid.org</code></pre>
                 <em>Listing</em> available packages:
                 <pre><code>pear remote-list -c simpleid</code></pre>
                 <em>Installing</em> a package:
@@ -22,8 +22,8 @@
                 <em>Installing</em> a specific version/stability:
                 <pre><code>pear install simpleid/package_name-1.0.0
 pear install simpleid/package_name-beta</code></pre>
-                <em>Receiving</em> updates via a <a href="http://simpleid.koinic.net/pear/feed.xml">feed</a>:
-                <pre><code>http://simpleid.koinic.net/pear/feed.xml</code></pre>
+                <em>Receiving</em> updates via a <a href="http://simpleid.org/pear/feed.xml">feed</a>:
+                <pre><code>http://simpleid.org/pear/feed.xml</code></pre>
 
                                     <h3>SimpleID<small> - SimpleID is a simple, personal OpenID provider</small></h3>
                     <p>SimpleID is a simple, personal OpenID provider written in PHP.</p>
@@ -31,12 +31,12 @@ pear install simpleid/package_name-beta</code></pre>
                         <tr><th>Install command</th><td><strong>pear install simpleid/SimpleID</strong></td></tr>
                                                 <tr><th>License</th><td>GPL</td></tr>
                                                                         <tr><th>Maintainers</th><td>Kelvin Mo <small>(as lead)</small></td></tr>
-                                                <tr><th>Releases</th><td><a href="http://simpleid.koinic.net/pear/get/SimpleID-0.9.tgz">0.9</a> <small>(beta)</small>, <a href="http://simpleid.koinic.net/pear/get/SimpleID-0.8.5.tgz">0.8.5</a> <small>(beta)</small>, <a href="http://simpleid.koinic.net/pear/get/SimpleID-0.8.4.tgz">0.8.4</a> <small>(beta)</small>, <a href="http://simpleid.koinic.net/pear/get/SimpleID-0.8.3.tgz">0.8.3</a> <small>(beta)</small>, <a href="http://simpleid.koinic.net/pear/get/SimpleID-0.8.2.tgz">0.8.2</a> <small>(beta)</small></td></tr>
+                                                <tr><th>Releases</th><td><a href="http://simpleid.org/pear/get/SimpleID-0.9.tgz">0.9</a> <small>(beta)</small>, <a href="http://simpleid.org/pear/get/SimpleID-0.8.5.tgz">0.8.5</a> <small>(beta)</small>, <a href="http://simpleid.org/pear/get/SimpleID-0.8.4.tgz">0.8.4</a> <small>(beta)</small>, <a href="http://simpleid.org/pear/get/SimpleID-0.8.3.tgz">0.8.3</a> <small>(beta)</small>, <a href="http://simpleid.org/pear/get/SimpleID-0.8.2.tgz">0.8.2</a> <small>(beta)</small></td></tr>
                     </table>
                             </div>
         </div>
         <div id="ft">
-            <p><small>The <em>simpleid.koinic.net</em> PEAR Channel Server is proudly powered by <a href="http://pirum.sensiolabs.org/">Pirum</a> 1.1.4</small></p>
+            <p><small>The <em>simpleid.org</em> PEAR Channel Server is proudly powered by <a href="http://pirum.sensiolabs.org/">Pirum</a> 1.1.4</small></p>
         </div>
     </div>
 </body>
