Add placeholder for search box

--- a/search/index.html
+++ b/search/index.html
@@ -7,7 +7,7 @@ permalink: /search/
 
 <div class="search-app" x-data="searchApp()" x-init="initIndex()">
     <form x-on:submit.prevent x-show="!isLoading">
-        <input type="text" x-model="q">
+        <input type="text" placeholder="Search for..." x-model="q">
         <button x-on:click="search()">Search</button>
     </form>
 
