--- a/search/index.html
+++ b/search/index.html
@@ -32,7 +32,7 @@ permalink: /search/
     </div>
 </div>
 
-<script src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2CArray.prototype.forEach%2CArray.prototype.map"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2CArray.prototype.forEach%2CArray.prototype.map%2CObject.values"></script>
 <script src="{{ "/search/lunr.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 
 <script type="text/javascript">
