Change layout of index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 ---
-layout: default
+layout: html
 published: true
 ---
 
 <div class="home">
-
     <div class="hero-panel">
+        <div class="wrapper">
         <div class="hero-content">
             <p><span class="hero-title">SimpleID</span> is a simple, personal OpenID provider written in PHP.</p>
         </div>
 
         <p><a href="/about" class="front-link">Learn&nbsp;more</a></p>
     </div>
+    </div>
 
-
+    <div class="wrapper">
     <div class="panels-wrapper">
         <div class="features-panel panel panel-col-1">
             <h2 class="panel-title">Features</h2>
@@ -55,4 +56,5 @@ published: true
         </div>
 
     </div>
+</div>
 </div>
