--- a/index.html
+++ b/index.html
@@ -1,58 +1,62 @@
 ---
-layout: default
+layout: html
 published: true
 ---
 
 <div class="home">
-
-    <div class="hero-panel">
-        <div class="hero-content">
-            <p><span class="hero-title">SimpleID</span> is a simple, personal OpenID provider written in PHP.</p>
-        </div>
-
+  <div class="hero-panel">
+    <div class="wrapper">
+      <div class="hero-content">
+        <h1><span class="hero-title">SimpleID</span> is a simple, personal OpenID provider written in PHP.</h1>
         <p><a href="/about" class="front-link">Learn&nbsp;more</a></p>
+      </div>
+      <div class="hero-image">
+      </div>
     </div>
+  </div>
 
-
-    <div class="panels-wrapper">
+  <div class="panel-section">
+    <div class="wrapper">
+      <div class="panels-wrapper-3">
         <div class="features-panel panel panel-col-1">
-            <h2 class="panel-title">Features</h2>
+          <h2 class="panel-title">Features</h2>
 
-            <div class="panel-content">
-                <ul>
-                    <li>Support for OpenID 1.1 and&nbsp;2.0</li>
-                    <li>Support for OpenID&nbsp;extensions</li>
-                    <li>Multiple identities with one&nbsp;installation</li>
-                    <li>Flat files only, no database&nbsp;required</li>
-                </ul>
+          <div class="panel-content">
+            <ul>
+              <li>Support for OpenID 1.1 and&nbsp;2.0</li>
+              <li>Support for OpenID&nbsp;extensions</li>
+              <li>Multiple identities with one&nbsp;installation</li>
+              <li>Flat files only, no database&nbsp;required</li>
+            </ul>
 
-                <p><a href="/about" class="front-link">Learn&nbsp;more</a></p>
-            </div>
+            <p><a href="/about" class="front-link">Learn&nbsp;more</a></p>
+          </div>
         </div>
 
         <div class="get-started-panel panel panel-col-2">
-            <h2 class="panel-title">Get started</h2>
+          <h2 class="panel-title">Get started</h2>
 
-            <div class="panel-content">
-                <p>Read how you could run your own OpenID&nbsp;provider.</p>
+          <div class="panel-content">
+            <p>Read how you could run your own OpenID&nbsp;provider.</p>
 
-              <p><a href="/docs/1/#getting-started" class="front-link">Getting Started&nbsp;Guide</a></p>
-            </div>
+            <p><a href="/docs/1/#getting-started" class="front-link">Getting Started&nbsp;Guide</a></p>
+          </div>
         </div>
-
 
         <div class="downloads-panel panel panel-col-3">
-            <h2 class="panel-title">Downloads</h2>
+          <h2 class="panel-title">Downloads</h2>
 
-            <div class="panel-content">
-                <div>Latest releases</div>
-                {% for post in site.categories.release limit:1 %}
-                <div><a href="{{ post.url | prepend: site.baseurl }}">SimpleID {{ post.release_version }}</a></div>
-                {% endfor %}
+          <div class="panel-content">
+            <div>Latest releases</div>
+            {%- for post in site.categories.release limit:1 -%}
+              <div><a href="{{ post.url | prepend: site.baseurl }}">SimpleID {{ post.release_version }}</a></div>
+            {%- endfor -%}
 
-                <p><a href="/releases" class="front-link">Download now</a></p>
-            </div>
+            <p><a href="/releases" class="front-link">Download now</a></p>
+          </div>
         </div>
 
+      </div>
     </div>
+  </div>
 </div>
